<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/signuptxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/happy_places"
                android:textAlignment="center"
                android:textSize="29sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="visible" />


            <TextView
                android:id="@+id/nameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="60dp"
                android:hint="@string/enter_name" />

            <TextView
                android:id="@+id/unameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/username"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/uname"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="60dp"
                android:autofillHints="johnDoe"
                android:hint="@string/enter_username"
                android:inputType="text" />

            <TextView
                android:id="@+id/emailView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/email_address"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="60dp"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress" />


            <TextView
                android:id="@+id/passwordView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="60dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/lavender_border"
                android:backgroundTint="@color/lavender"
                android:padding="15sp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/hasAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/already_have_an_account"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/loginNow"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/lavender_border"
                android:backgroundTint="@color/lavender"
                android:padding="15sp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="21sp" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>